Almost done with SSL testing